[package]
name = "noise"
description = "Procedural noise generation library."
homepage = "https://github.com/razaekel/noise-rs"
repository = "https://github.com/razaekel/noise-rs"
documentation = "https://docs.rs/noise/"
version = "0.5.1"
license = "Apache-2.0/MIT"
keywords = ["math", "random"]
authors = ["The Noise-rs Developers."]

[lib]
name = "noise"

[dependencies]
rand = "0.3"
image = "0.18"

[[bench]]
name = "benches"

[[example]]
name = "perlin"

[[example]]
name = "open_simplex"

[[example]]
name = "super_simplex"

[[example]]
name = "value"

[[example]]
name = "constant"

[[example]]
name = "checkerboard"

[[example]]
name = "cylinders"

[[example]]
name = "select"

[[example]]
name = "blend"

[[example]]
name = "abs"

[[example]]
name = "clamp"

[[example]]
name = "curve"

[[example]]
name = "exponent"

[[example]]
name = "invert"

[[example]]
name = "scale_bias"

[[example]]
name = "terrace"

[[example]]
name = "add"

[[example]]
name = "max"

[[example]]
name = "min"

[[example]]
name = "multiply"

[[example]]
name = "power"

[[example]]
name = "fbm"

[[example]]
name = "billow"

[[example]]
name = "basicmulti"

[[example]]
name = "ridgedmulti"

[[example]]
name = "hybridmulti"

[[example]]
name = "cache"

[[example]]
name = "worley"

[[example]]
name = "displace"

[[example]]
name = "rotate_point"

[[example]]
name = "scale_point"

[[example]]
name = "translate_point"

[[example]]
name = "turbulence"

[[example]]
name = "texturewood"

[[example]]
name = "texturejade"

[[example]]
name = "texturegranite"

[[example]]
name = "textureslime"

[[example]]
name = "complexplanet"
