[package]
name = "noise"
description = "Procedural noise generation library."
homepage = "https://github.com/razaekel/noise-rs"
repository = "https://github.com/razaekel/noise-rs"
documentation = "https://docs.rs/noise/"
version = "0.8.2"
license = "Apache-2.0/MIT"
keywords = ["math", "random"]
authors = ["The Noise-rs Developers."]
edition = "2018"

[lib]
name = "noise"

[dependencies]
rand = "0.7"
rand_xorshift = "0.2"
image = { version = "0.23", optional = true }
num-traits = "0.2"

[features]
default = []
images = ["image", "std"]
std = []

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_pcg = "0.2"

[[bench]]
name = "open_simplex"
harness = false

[[bench]]
name = "perlin"
harness = false

[[bench]]
name = "simplex"
harness = false

[[bench]]
name = "super_simplex"
harness = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "worley"
harness = false

[[example]]
name = "perlin"
required-features = ["images"]

[[example]]
name = "perlin_surflet"
required-features = ["images"]

[[example]]
name = "open_simplex"
required-features = ["images"]

[[example]]
name = "super_simplex"
required-features = ["images"]

[[example]]
name = "value"
required-features = ["images"]

[[example]]
name = "constant"
required-features = ["images"]

[[example]]
name = "checkerboard"
required-features = ["images"]

[[example]]
name = "cylinders"
required-features = ["images"]

[[example]]
name = "select"
required-features = ["images"]

[[example]]
name = "blend"
required-features = ["images"]

[[example]]
name = "abs"
required-features = ["images"]

[[example]]
name = "clamp"
required-features = ["images"]

[[example]]
name = "curve"
required-features = ["images"]

[[example]]
name = "exponent"
required-features = ["images"]

[[example]]
name = "negate"
required-features = ["images"]

[[example]]
name = "scale_bias"
required-features = ["images"]

[[example]]
name = "terrace"
required-features = ["images"]

[[example]]
name = "add"
required-features = ["images"]

[[example]]
name = "max"
required-features = ["images"]

[[example]]
name = "min"
required-features = ["images"]

[[example]]
name = "multiply"
required-features = ["images"]

[[example]]
name = "power"
required-features = ["images"]

[[example]]
name = "fbm"
required-features = ["images"]

[[example]]
name = "billow"
required-features = ["images"]

[[example]]
name = "basicmulti"
required-features = ["images"]

[[example]]
name = "ridgedmulti"
required-features = ["images"]

[[example]]
name = "hybridmulti"
required-features = ["images"]

[[example]]
name = "cache"
required-features = ["images"]

[[example]]
name = "worley"
required-features = ["images"]

[[example]]
name = "displace"
required-features = ["images"]

[[example]]
name = "rotate_point"
required-features = ["images"]

[[example]]
name = "scale_point"
required-features = ["images"]

[[example]]
name = "translate_point"
required-features = ["images"]

[[example]]
name = "turbulence"
required-features = ["images"]

[[example]]
name = "texturewood"
required-features = ["images"]

[[example]]
name = "texturejade"
required-features = ["images"]

[[example]]
name = "texturegranite"
required-features = ["images"]

[[example]]
name = "textureslime"
required-features = ["images"]

[[example]]
name = "complexplanet"
required-features = ["images"]

[[example]]
name = "simplex"
required-features = ["images"]
